--- a/Magic8Ball/app/src/main/AndroidManifest.xml
+++ b/Magic8Ball/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".addResponseActivity"
+            android:label="@string/title_activity_add_response"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".add_reponse">
+        </activity>
     </application>
 
 </manifest>
